[project]
name = "wikidocs-blog-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=1.2.3",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.5",
    "python-dotenv>=1.2.1",
]
